Updated dialogs and adapters

--- a/app/src/main/res/layout/listview_teachers_adapter.xml
+++ b/app/src/main/res/layout/listview_teachers_adapter.xml
@@ -30,8 +30,8 @@
                 android:id="@+id/emailteacher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/email"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
@@ -44,9 +44,9 @@
                 android:id="@+id/nameteacher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="34dp"
                 android:layout_marginTop="2dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/name"
                 android:textAlignment="center"
                 android:textAllCaps="false"
@@ -56,6 +56,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/personimage"
                 app:layout_constraintTop_toTopOf="parent"
+                card_view:layout_constraintEnd_toStartOf="@+id/popupbtn"
                 card_view:layout_constraintStart_toStartOf="parent" />
 
             <View
@@ -74,14 +75,15 @@
                 android:id="@+id/numberteacher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/phone_number"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 card_view:layout_constraintEnd_toEndOf="@+id/postteacher"
+                card_view:layout_constraintHorizontal_bias="0.0"
                 card_view:layout_constraintStart_toEndOf="@+id/imageView5"
                 card_view:layout_constraintTop_toBottomOf="@+id/postteacher" />
 
@@ -89,15 +91,15 @@
                 android:id="@+id/postteacher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="30dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="34dp"
                 android:text="@string/post"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                card_view:layout_constraintEnd_toEndOf="@+id/line"
+                card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toEndOf="@+id/personimage"
                 card_view:layout_constraintTop_toBottomOf="@+id/line" />
 
