--- a/app/src/main/res/layout/listview_teachers_adapter.xml
+++ b/app/src/main/res/layout/listview_teachers_adapter.xml
@@ -49,7 +49,7 @@
                 android:layout_marginEnd="8dp"
                 android:text="@string/name"
                 android:textAlignment="center"
-                android:textAllCaps="false"
+                android:textAllCaps="true"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
