--- a/app/src/main/res/layout/activity_homeworks.xml
+++ b/app/src/main/res/layout/activity_homeworks.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinatorHomeworks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.HomeworksActivity"
+    tools:context=".activities.HomeworksActivity"
     android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
