--- a/app/src/main/res/layout/fragment_saturday.xml
+++ b/app/src/main/res/layout/fragment_saturday.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.SaturdayFragment">
+    tools:context=".fragments.SaturdayFragment">
 
     <ListView
         android:id="@+id/saturdaylist"
