--- a/app/src/main/res/layout/listview_exams_adapter.xml
+++ b/app/src/main/res/layout/listview_exams_adapter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/exams_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="5dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/card_background_selector"
@@ -120,7 +120,7 @@
                 card_view:layout_constraintEnd_toEndOf="@+id/teacherexams"
                 card_view:layout_constraintStart_toStartOf="@+id/guideline2" />
 
-            <android.support.constraint.Guideline
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -162,6 +162,6 @@
                 card_view:layout_constraintStart_toStartOf="@+id/imageView"
                 card_view:layout_constraintTop_toTopOf="@+id/dateexams" />
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
