--- a/app/src/main/res/layout/listview_notes_adapter.xml
+++ b/app/src/main/res/layout/listview_notes_adapter.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:descendantFocusability="beforeDescendants">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/notes_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="5dp">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/card_background_selector"
@@ -55,6 +55,6 @@
             card_view:layout_constraintTop_toTopOf="@+id/titlenote"
             card_view:srcCompat="@drawable/baseline_expand_more_black_24" />
 
-    </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
