--- a/app/src/main/res/layout/listview_teachers_adapter.xml
+++ b/app/src/main/res/layout/listview_teachers_adapter.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/teacher_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,7 +15,7 @@
         card_view:cardCornerRadius="5dp"
         card_view:cardElevation="5dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/card_background_selector"
@@ -103,7 +103,7 @@
                 card_view:layout_constraintStart_toEndOf="@+id/personimage"
                 card_view:layout_constraintTop_toBottomOf="@+id/line" />
 
-            <android.support.constraint.Guideline
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -144,6 +144,6 @@
                 card_view:layout_constraintStart_toStartOf="@+id/personimage"
                 card_view:layout_constraintTop_toTopOf="@+id/numberteacher" />
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
