changed icon & lint fixes

--- a/app/src/main/res/layout/dialog_add_teacher.xml
+++ b/app/src/main/res/layout/dialog_add_teacher.xml
@@ -104,8 +104,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="50dp"
             android:background="@color/white"
             android:text="@string/select_color"
             android:textAlignment="center"
