--- a/app/src/main/res/layout/dialog_add_exam.xml
+++ b/app/src/main/res/layout/dialog_add_exam.xml
@@ -92,7 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackground"
             android:text="@string/choose_date"
             android:textAlignment="center"
             android:textAllCaps="true"
@@ -119,7 +119,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackground"
             android:text="@string/select_time"
             android:textAlignment="center"
             android:textAllCaps="true"
