--- a/app/src/main/res/drawable-xxhdpi/shortcuts_background.xml
+++ b/app/src/main/res/drawable-xxhdpi/shortcuts_background.xml
@@ -1,4 +1,4 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -15,20 +15,17 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with GymWenApp.  If not, see <https://www.gnu.org/licenses/>.
   -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:centerColor="@color/colorPrimaryDark"
-        android:endColor="@color/colorPrimaryDark"
-        android:startColor="@color/colorPrimary"
-        android:type="linear" />
+        android:startColor="#36dad2"
+        android:endColor="#5877e6"
+        android:angle="45" />
 
-    <!--    <gradient
-            android:angle="135"
-            android:endColor="@color/colorPrimaryDark"
-            android:centerColor="@color/colorPrimary"
-            android:startColor="@color/colorPrimary"
-            android:type="linear" />-->
+    <size
+        android:width="25dp"
+        android:height="25dp" />
+    <corners android:radius="5dp" />
+
+
 </shape>
