--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -60,8 +60,7 @@
             <TextView
                 android:id="@+id/nav_header_main_desc"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/subtitle" />
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <ImageButton
