--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,9 +17,9 @@
   -->
 
 <resources>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#03A9F4</color>
 
 
     <!--    Website Activity-->
