--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.preference.SwitchPreferenceCompat
         android:defaultValue="false"
@@ -44,6 +45,7 @@
         android:title="@string/set_notification_alarm" />
 
     <Preference
+        app:isPreferenceVisible="false"
         android:key="cyanea"
         android:title="Theming" />
 </PreferenceScreen>
