--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,13 +21,8 @@
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#03A9F4</color>
 
-
-    <!--    Website Activity-->
-    <color name="web_background_homepages">#80f2f2f2</color>
-
     <!-- Widget -->
     <color name="widget_black">#D9000000</color>
-
-
     <color name="white">#FFFFFF</color>
+    <color name="grey">#212121</color>
 </resources>
