--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -2,19 +2,28 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.preference.SwitchPreferenceCompat
+    <SwitchPreferenceCompat
         android:defaultValue="false"
-        android:key="sevendays"
         android:icon="@drawable/ic_view_week_black_24dp"
-        android:title="@string/seven_days_of_the_week"
-        android:summary="@string/sevendays_setting" />
+        android:key="sevendays"
+        android:summary="@string/sevendays_setting"
+        android:title="@string/seven_days_of_the_week" />
+
     <EditTextPreference
+        android:icon="@drawable/ic_open_in_browser_white_24dp"
         android:key="schoolwebsite"
         android:selectAllOnFocus="true"
-        android:icon="@drawable/ic_open_in_browser_white_24dp"
         android:singleLine="true"
-        android:title="@string/school_website_setting"
-        android:summary="@string/school_website_setting_summary"/>
+        android:summary="@string/school_website_setting_summary"
+        android:title="@string/school_website_setting" />
+
+    <ListPreference
+        android:defaultValue="switch"
+        android:entries="@array/theme_array"
+        android:entryValues="@array/theme_array_values"
+        android:icon="@drawable/ic_palette_black_24dp"
+        android:key="theme"
+        android:title="@string/set_choose_theme" />
 
     <SwitchPreferenceCompat
         android:defaultValue="true"
@@ -45,7 +54,7 @@
         android:title="@string/set_notification_alarm" />
 
     <Preference
-        app:isPreferenceVisible="false"
         android:key="cyanea"
-        android:title="Theming" />
+        android:title="Theming"
+        app:isPreferenceVisible="false" />
 </PreferenceScreen>
