--- a/app/src/main/res/res/layout/timetable_activity_main.xml
+++ b/app/src/main/res/res/layout/timetable_activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent" />
 
     <include
-        layout="@layout/timetable_app_bar_main"
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -26,6 +26,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/timetable_activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
