--- a/app/src/main/res/res/layout/timetable_app_bar_main.xml
+++ b/app/src/main/res/res/layout/timetable_app_bar_main.xml
@@ -56,6 +56,6 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/timetable_content_main" />
+        layout="@layout/content_main" />
 
 </LinearLayout>
