--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -49,7 +49,7 @@
         android:summary="@string/set_desc_alwaysNotification"
         android:title="@string/set_notification_showAlways" />
     <Preference
-        android:key="timetable_alarm"
+        android:key="alarm"
         android:summary="@string/set_desc_alarm"
         android:title="@string/set_notification_alarm" />
 
