--- a/app/src/main/res/layout/fragment_weekday.xml
+++ b/app/src/main/res/layout/fragment_weekday.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/timetable_daylist"
+        android:id="@+id/daylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:listSelector="@android:color/transparent"
