--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,17 +7,17 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_timetable_backup"
+        android:id="@+id/action_backup"
         android:orderInCategory="100"
         android:title="@string/menu_backup"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_timetable_restore"
+        android:id="@+id/action_restore"
         android:orderInCategory="100"
         android:title="@string/menu_restore"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_timetable_remove_all"
+        android:id="@+id/action_remove_all"
         android:orderInCategory="100"
         android:title="@string/remove_all_subjects"
         app:showAsAction="never" />
