added about libs & some Bugfixes

--- a/app/src/main/res/layout/listview_week_adapter.xml
+++ b/app/src/main/res/layout/listview_week_adapter.xml
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/widget_black"
+                android:background="@color/black"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@+id/subject" />
