--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_settings"
+        android:icon="@drawable/ic_settings_black_24dp"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:iconTint="@android:color/white"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_backup"
         android:orderInCategory="100"
@@ -21,5 +23,9 @@
         android:orderInCategory="100"
         android:title="@string/remove_all_subjects"
         app:showAsAction="never" />
-
+    <item
+        android:id="@+id/action_about_libs"
+        android:orderInCategory="100"
+        android:title="@string/about_libs_title"
+        app:showAsAction="never" />
 </menu>
