--- a/app/src/main/res/layout/dialog_add_subject.xml
+++ b/app/src/main/res/layout/dialog_add_subject.xml
@@ -75,8 +75,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
-            android:inputType="textVisiblePassword"
             android:imeOptions="actionDone"
+            android:inputType="textVisiblePassword"
             android:singleLine="true"
             android:textColor="?android:attr/textColorPrimary" />
     </LinearLayout>
@@ -100,10 +100,23 @@
             android:id="@+id/from_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".7"
+            android:layout_weight=".45"
             android:background="?attr/selectableItemBackground"
             android:gravity="center"
             android:text="@string/select_start_time"
+            android:textAllCaps="true"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/from_hour"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".25"
+            android:background="?attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="@string/lesson"
             android:textAllCaps="true"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="18sp"
@@ -129,10 +142,23 @@
             android:id="@+id/to_time"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".7"
+            android:layout_weight=".45"
             android:background="?attr/selectableItemBackground"
             android:gravity="center"
             android:text="@string/select_end_time"
+            android:textAllCaps="true"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/to_hour"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".25"
+            android:background="?attr/selectableItemBackground"
+            android:gravity="center"
+            android:text="@string/lesson"
             android:textAllCaps="true"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="18sp"
